--- a/src/app/components/shared/footer/footer.html
+++ b/src/app/components/shared/footer/footer.html
@@ -3,7 +3,9 @@
     <div class="footer-content">
       <div class="footer-section">
         <h6>ByteBattle</h6>
-        <p class="small">Plataforma competitiva de programación con premios en efectivo.</p>
+        <p class="small">
+          Plataforma competitiva de programación con premios en efectivo.
+        </p>
         <div class="social-icons">
           <a href="#" class="me-2"><i class="bi bi-twitter"></i></a>
           <a href="#" class="me-2"><i class="bi bi-github"></i></a>
@@ -16,6 +18,7 @@
         <div class="footer-links">
           <a routerLink="/" class="small">Inicio</a>
           <a routerLink="/challenges" class="small">Retos</a>
+          <a routerLink="/about" class="small">Acerca de</a>
           <a routerLink="#" class="small">Términos</a>
           <a routerLink="#" class="small">Privacidad</a>
         </div>
@@ -24,15 +27,40 @@
       <div class="footer-section">
         <h6>Contacto</h6>
         <div class="contact-info">
-          <div class="small"><i class="bi bi-envelope me-1"></i> support&#64;bytebattle.com</div>
-          <div class="small"><i class="bi bi-twitter me-1"></i> &#64;bytebattle</div>
-          <div class="small"><i class="bi bi-geo-alt me-1"></i> Medellín, Colombia</div>
+          <div class="small">
+            <i class="bi bi-envelope me-1"></i>
+            Sebastian.VegaR2015&#64;gmail.com
+          </div>
+          <div class="small">
+            <i class="bi bi-envelope me-1"></i> Johan.Vega01&#64;uptc.edu.co.com
+          </div>
+          <div class="small">
+            <i class="bi bi-instagram me-1"></i
+            ><a
+              href="https://www.instagram.com/sebastian.vegar/"
+              target="_blank"
+            >
+              &#64;Sebastian.vegar</a
+            >
+          </div>
+          <div class="small">
+            <i class="bi bi-linkedin"></i>Linkedin:<a
+              href="https://www.linkedin.com/in/johan-sebastian-vega-ruiz-b1292011b/"
+              target="_blank"
+              >Sebastian Vega</a
+            >
+          </div>
+          <div class="small">
+            <i class="bi bi-geo-alt me-1"></i> Duitama, Colombia
+          </div>
         </div>
       </div>
     </div>
 
     <div class="footer-copyright">
-      <p class="x-small">&copy; {{ currentYear }} ByteBattle. Todos los derechos reservados.</p>
+      <p class="x-small">
+        &copy; {{ currentYear }} ByteBattle. Todos los derechos reservados.
+      </p>
     </div>
   </div>
 </footer>
