--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -4,13 +4,22 @@
       <span>ByteBattle</span>
       <span class="terminal-cursor ms-1"></span>
     </a>
-
     <div class="collapse navbar-collapse" id="navbarNav">
       <!-- Enlaces principales -->
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
+          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active"
+            >Inicio</a
+          >
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/challenges" routerLinkActive="active"
             >Retos</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active"
+            >Acerca de</a
           >
         </li>
         @if (authService.isAdmin()) {
